--- a/template/css/style.css
+++ b/template/css/style.css
@@ -132,6 +132,7 @@ input[type=radio]{float:left; margin:3px 5px 0 0;}
 #recent-posts-3 ul, #categories-3 ul, .widget_categories ul {list-style:none; float:left; width:100%;}
 #recent-posts-3 ul li{float:left; width:100%; margin-bottom:10px; font-size:13px;}
 .widget_categories ul li{position:relative; width:100%; float:left; color:rgb(102,102,102); font-size:13px !important; margin-bottom:4px; padding-bottom:4px; border-bottom:1px solid rgb(229,229,229);}
+.widget_categories ul li.hide {display: none;}
 .tagcloud{float:left; width:100%;}
 .tagcloud a{width:100%; float:left; color:rgb(102,102,102); font-size:13px !important; margin-bottom:4px; padding-bottom:4px; border-bottom:1px solid rgb(229,229,229);}
 .cat-item-count{width:36px; font-size:12px !important; line-height:20px !important; position:absolute; right:0; top:1px; overflow:hidden; border-radius:11px; text-align:center; background:rgb(172,172,172); color:rgb(255,255,255);}
