--- a/template/css/style.css
+++ b/template/css/style.css
@@ -72,7 +72,8 @@ a:visited{color:rgb(0,153,255);}
 
 /* CONTENT */
 #conteudo{width:70%; float:left; margin-bottom: 20px}
-ol.doc-loop li {list-style-position: inside;float:left; background:rgb(245,245,245); border:1px solid rgb(223,223,223); padding:15px; border-radius:5px; margin-top:15px;font-size: 1.2rem; font-weight: bold; color: #000;}
+ol.doc-loop { display: table; width: 100%; }
+ol.doc-loop li {list-style-position: inside; display: table-caption; background:rgb(245,245,245); border:1px solid rgb(223,223,223); padding:15px; border-radius:5px; margin-top:15px;font-size: 1.2rem; font-weight: bold; color: #000;}
 ol.doc-loop li p {font-size: .9rem; font-weight: normal; color:rgb(102,102,102);}
 .conteudo-loop{width:auto; position:relative; }
 .conteudo-loop-rates{position:absolute; right:15px; top:18px; z-index:3;}
@@ -84,8 +85,8 @@ ol.doc-loop li p {font-size: .9rem; font-weight: normal; color:rgb(102,102,102);
 .conteudo-loop-icons-li a:hover{text-decoration:underline; color:rgb(0,0,0);}
 #conteudo-loop-idiomas, #conteudo-loop-data{font-weight:bold;}
 .conteudo-loop-idiomas-tit, .conteudo-loop-data-tit{font-style: italic; font-weight:normal;}
-.resultsBar {margin-top:5px; display: flex; align-items: center;}
-.resultsBar div select {margin:0 .8rem 0 0;}
+.resultsBar {margin-top:5px;}
+.resultsBar div select {margin:0 .8rem 5px 0;}
 .resultsBar div select#per_page{margin:0;}
 .rss_feed{float:left;margin-left:5px;}
 .more{padding:3px 6px;background:rgb(0,74,142);font-size: 80%;border-radius:4px;}
@@ -99,7 +100,6 @@ ol.doc-loop li p {font-size: .9rem; font-weight: normal; color:rgb(102,102,102);
 .breadcrumb-home {font-size: 60%;}
 .count-docs {margin-top: 12px;}
 .doc-view li  {list-style: none !important;}
-.addthis_toolbox {display: flex; align-items: center;}
 
 /* FORMS */
 textarea, input{font:12px "Open Sans", Helvetica, Arial, Sans-Serif; color:rgb(102,102,102); line-height:18px;}
@@ -218,6 +218,8 @@ input[type=radio]{float:left; margin:3px 5px 0 0;}
 }
 
 .position { display: inline; }
+.addthis_default_style .addthis_separator { position: relative; top: -3px; }
+#contact a { color: #333; font-weight: normal; text-decoration: underline; padding-right: 10px; }
 
 @media (min-width: 766px) and (max-width: 1099px) {
 	.ajusta, .ajusta3, .ajusta2, .top, .bar .barInner, .footerArea {width:100%; margin:0;}
@@ -231,7 +233,7 @@ input[type=radio]{float:left; margin:3px 5px 0 0;}
 	.ajusta, .ajusta3, .ajusta2, .top, .bar .barInner, .footerArea {width:100%; margin:0;}
 	.h2-loop-tit{width:100%;}
 	.conteudo-loop-rates{position:relative; right:0px; top:0px; float:left; width:100%; margin-top:7px;}
-	.header-search{width:400px; margin:15px 2.5%;}
+	.header-search{width:100%; margin:15px 2.5%;}
 	.input-search{width:275px;}
 	.header-colabore{display:none;}
 	#conteudo{width:95%; margin:0 2.5%;}
@@ -241,10 +243,11 @@ input[type=radio]{float:left; margin:3px 5px 0 0;}
 	.conteudo-loop-icons-li{width:50%; float:left; margin:0; position:relative; line-height:26px;}
 	.conteudo-loop-icons-li:first-child{margin:0px !important;}
 	.conteudo-loop-icons-li:last-child{margin:0px !important;}
-	#sidebar{width: 94%;float: none;}
+	#sidebar{width: auto;float: none;padding: 0 20px;}
 	.tablet{display:block;}
 	#left{float:left !important;}
 	.menu-mapa-do-site-pt-container {width:auto;}
+    .resultsBar {width: 79% !important}
 }
 
 @media (max-width: 525px) {
@@ -270,4 +273,12 @@ input[type=radio]{float:left; margin:3px 5px 0 0;}
 	#left{float:left !important;}
 	.tablet{display:block;}
 	.menu-mapa-do-site-pt-container {width:auto;}
+}
+
+@media (max-width: 479px) {
+	.container {width: 97%;}
+	.header-search .input-search {width:50%;}
+	#searchsubmit {padding: 10px 10px;}
+    .help {margin-left: 2px;}
+	/*#parent {margin-top: 40px;}*/
 }
