--- a/template/css/style.css
+++ b/template/css/style.css
@@ -29,7 +29,7 @@ a:visited{color:rgb(0,153,255);}
 /* HEADINGS */
 .bar div {margin-top:4px;}
 .h1-header{float:left; line-height:30px; font-size:26px; color:#28367D !important; font-weight:normal; text-decoration:none;}
-.h2-loop-tit, .h2-loop-tit a {font-weight:bold;font-size:1.3rem;line-height: 135%;color: #333; text-decoration: none;}
+.h2-loop-tit, .h2-loop-tit a {font-weight:bold;font-size:1.3rem;line-height: 135%;color: #333; text-decoration: none; margin: 10px 0 10px;}
 .h2-loop-tit a:hover {color: #344c66;}
 .altLang {display:block;color:#999;font-style: italic;}
 
@@ -75,7 +75,7 @@ a:visited{color:rgb(0,153,255);}
 ol.doc-loop { display: table; width: 100%; }
 ol.doc-loop li {list-style-position: inside; display: table-caption; background:rgb(245,245,245); border:1px solid rgb(223,223,223); padding:15px; border-radius:5px; margin-top:15px;font-size: 1.2rem; font-weight: bold; color: #000;}
 ol.doc-loop li p {font-size: .9rem; font-weight: normal; color:rgb(102,102,102);}
-.conteudo-loop{width:auto; position:relative; }
+.conteudo-loop{width: 100%; float: left; background: rgb(245,245,245); border: 1px solid rgb(223,223,223); padding: 15px; border-radius: 5px; margin-top: 15px; }
 .conteudo-loop-rates{position:absolute; right:15px; top:18px; z-index:3;}
 .conteudo-loop-icons{list-style:none; float:left; width:100%; max-height:22px;margin-bottom: 12px;border-bottom: 1px solid #999;padding-bottom: 12px; }
 .conteudo-loop-icons-li{float:left; margin:0 18.3px; position:relative;}
@@ -129,10 +129,10 @@ input[type=radio]{float:left; margin:3px 5px 0 0;}
 
 /* SIDEBAR */
 #sidebar{width:27%; float:right;}
-#recent-posts-3 ul, #categories-3 ul, .widget_categories ul {list-style:none; float:left; width:100%;}
+#recent-posts-3 ul, #categories-3 ul, .widget_categories ul {list-style:none; float:left; width:100%; margin: 0; padding: 0;}
 #recent-posts-3 ul li{float:left; width:100%; margin-bottom:10px; font-size:13px;}
 .widget_categories ul li{position:relative; width:100%; float:left; color:rgb(102,102,102); font-size:13px !important; margin-bottom:4px; padding-bottom:4px; border-bottom:1px solid rgb(229,229,229);}
-.widget_categories ul li.hide {display: none;}
+.widget_categories ul li a { display: block; width: 85%; }
 .tagcloud{float:left; width:100%;}
 .tagcloud a{width:100%; float:left; color:rgb(102,102,102); font-size:13px !important; margin-bottom:4px; padding-bottom:4px; border-bottom:1px solid rgb(229,229,229);}
 .cat-item-count{width:36px; font-size:12px !important; line-height:20px !important; position:absolute; right:0; top:1px; overflow:hidden; border-radius:11px; text-align:center; background:rgb(172,172,172); color:rgb(255,255,255);}
