--- a/template/css/style.css
+++ b/template/css/style.css
@@ -29,7 +29,7 @@ a:visited{color:rgb(0,153,255);}
 /* HEADINGS */
 .bar div {margin-top:4px;}
 .h1-header{float:left; line-height:30px; font-size:26px; color:#28367D !important; font-weight:normal; text-decoration:none;}
-.h2-loop-tit, .h2-loop-tit a {font-weight:bold;font-size:1.3rem;line-height: 135%;color: #333; text-decoration: none; margin: 10px 0 10px;}
+.h2-loop-tit, .h2-loop-tit a {font-weight:bold;font-size:1.3em;line-height: 135%;color: #333; text-decoration: none; margin: 10px 0 10px;}
 .h2-loop-tit a:hover {color: #344c66;}
 .altLang {display:block;color:#999;font-style: italic;}
 
@@ -85,6 +85,7 @@ ol.doc-loop li p {font-size: .9rem; font-weight: normal; color:rgb(102,102,102);
 .conteudo-loop-icons-li a:hover{text-decoration:underline; color:rgb(0,0,0);}
 #conteudo-loop-idiomas, #conteudo-loop-data{font-weight:bold;}
 .conteudo-loop-idiomas-tit, .conteudo-loop-data-tit{font-style: italic; font-weight:normal;}
+.conteudo-loop .authors{font-size:1.22em}
 .resultsBar {margin-top:5px;}
 .resultsBar div select {margin:0 .8rem 5px 0;}
 .resultsBar div select#per_page{margin:0;}
@@ -231,7 +232,7 @@ input[type=radio]{float:left; margin:3px 5px 0 0;}
 
 @media (min-width: 525px) and (max-width: 767px) {
 	.ajusta, .ajusta3, .ajusta2, .top, .bar .barInner, .footerArea {width:100%; margin:0;}
-	.h2-loop-tit{width:100%;}
+	.h2-loop-tit{width:110%;}
 	.conteudo-loop-rates{position:relative; right:0px; top:0px; float:left; width:100%; margin-top:7px;}
 	.header-search{width:100%; margin:15px 2.5%;}
 	.input-search{width:275px;}
