--- a/template/css/style.css
+++ b/template/css/style.css
@@ -332,3 +332,19 @@ input[type=radio]{float:left; margin:3px 5px 0 0;}
     -webkit-transform: rotate(45deg) translate(-6px, -6px) ;
     transform: rotate(45deg) translate(-6px, -6px) ;
 }
+
+/* loader */
+
+.loader {
+    border: 2px solid #f3f3f3; /* Light grey */
+    border-top: 2px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+    margin: 20px;
+}
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
