--- a/template/css/style.css
+++ b/template/css/style.css
@@ -334,6 +334,7 @@ input[type=radio]{float:left; margin:3px 5px 0 0;}
 }
 
 /* loader */
+
 .loader {
     border: 2px solid #f3f3f3; /* Light grey */
     border-top: 2px solid #3498db; /* Blue */
@@ -347,7 +348,6 @@ input[type=radio]{float:left; margin:3px 5px 0 0;}
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
-/* tab menu */
 #tabs ul {
 	list-style: none;
 }
@@ -356,12 +356,18 @@ input[type=radio]{float:left; margin:3px 5px 0 0;}
     background: transparent;
     box-shadow: none;
 }
+
 #tabs ul li button {
     float: left;
     margin-right: 20px;
     color: #ccc;
-    font-weight: bold;
+    font-weight: bold;		
+		font-size: 12px;
 }
 #tabs ul li button:hover {
     color: #000;
+}
+#tabs ul li.active button {
+    color: #000;
+
 }
