Ordenação dos Filtros

--- a/template/css/style.css
+++ b/template/css/style.css
@@ -361,7 +361,7 @@ input[type=radio]{float:left; margin:3px 5px 0 0;}
     float: left;
     margin-right: 20px;
     color: #ccc;
-    font-weight: bold;		
+    font-weight: bold;
 		font-size: 12px;
 }
 #tabs ul li button:hover {
@@ -370,4 +370,33 @@ input[type=radio]{float:left; margin:3px 5px 0 0;}
 #tabs ul li.active button {
     color: #000;
 
+}
+.destak h2 {
+	margin-top: -30px;
+	background-color: #dbdbdb;
+	padding: 5px 10px;
+	color: #545454;
+	font-size: 16px;
+	font-weight: normal;
+	width: 110px;
+	margin-bottom: 10px;
+	border-radius: 5px;
+}
+
+
+.destak {
+	border: 1px solid #ccc;
+	padding: 15px;
+	border-radius: 5px;
+	float: left;
+	margin-top: 30px;
+	width: 100%;
+	box-sizing: border-box;
+
+}
+
+.video iframe {
+	margin: 5%;
+	width: 90%;
+	box-shadow: 2px 2px 5px #888;
 }
