--- a/template/css/style.css
+++ b/template/css/style.css
@@ -31,7 +31,7 @@ a:visited{color:rgb(0,153,255);}
 .h1-header{float:left; line-height:30px; font-size:26px; color:#28367D !important; font-weight:normal; text-decoration:none;}
 .h2-loop-tit, .h2-loop-tit a {font-weight:bold;font-size:1.3em;line-height: 135%;color: #333; text-decoration: none; margin: 10px 0 10px;}
 .h2-loop-tit a:hover {color: #344c66;}
-.altLang {display:none}
+.altLang {font-style: italic; margin-top: 4px}
 
 /* ALL */
 .site-main{overflow:auto;}
