Fixed #50 -- Criar nova opção de página inicial do plugin

--- a/template/css/style.css
+++ b/template/css/style.css
@@ -1,10 +1,10 @@
 /*
-	Theme Name: LILDBI-Web
-	Theme URI:
-	Description: OPAC for LILDBI-Web
-	Version: 1.0
-	Author: BIREME/OPAS/OMS
-	Author URL: http://www.bireme.org
+    Theme Name: LILDBI-Web
+    Theme URI:
+    Description: OPAC for LILDBI-Web
+    Version: 1.0
+    Author: BIREME/OPAS/OMS
+    Author URL: http://www.bireme.org
 */
 
 /* FONT-FACE */
@@ -89,6 +89,7 @@ ol.doc-loop li p {font-size: .9rem; font-weight: normal; color:rgb(102,102,102);
 .resultsBar {margin-top:5px;}
 .resultsBar div select {margin:0 .8rem 5px 0;}
 .resultsBar div select#per_page{margin:0;}
+.rss {position: relative; bottom: 3rem;}
 .rss_feed{float:left;margin-left:5px;}
 .more{padding:3px 6px;background:rgb(0,74,142);font-size: 80%;border-radius:4px;}
 .more a{color:rgb(255,255,255);text-decoration:none;}
@@ -109,16 +110,16 @@ select{float:left; border-radius:4px; border:1px solid rgb(132,132,132); font-si
 input[type=radio]{float:left; margin:3px 5px 0 0;}
 .select-input-home{max-height:29px; min-height:29px; margin:0 10px;}
 #searchsubmit{
-	cursor: pointer;
-	border: 1px solid #475f78;
-	padding: 10px 18px;
-	color: #fff;
-	background-image: linear-gradient(bottom, #426684 14%, #29B3FD 60%, #0E85CA 85%);
-	background-image: -o-linear-gradient(bottom, #426684 14%, #29B3FD 60%, #0E85CA 85%);
-	background-image: -moz-linear-gradient(bottom, #426684 14%, #29B3FD 60%, #0E85CA 85%);
-	background-image: -webkit-linear-gradient(bottom, #426684 14%, #29B3FD 60%, #0E85CA 85%);
-	background-image: -ms-linear-gradient(bottom, #426684 14%, #29B3FD 60%, #0E85CA 85%);
-	background-image: -webkit-gradient(linear,left bottom, left top, color-stop(0.14, #426684),color-stop(0.6, #29B3FD),color-stop(0.85, #0E85CA));
+    cursor: pointer;
+    border: 1px solid #475f78;
+    padding: 10px 18px;
+    color: #fff;
+    background-image: linear-gradient(bottom, #426684 14%, #29B3FD 60%, #0E85CA 85%);
+    background-image: -o-linear-gradient(bottom, #426684 14%, #29B3FD 60%, #0E85CA 85%);
+    background-image: -moz-linear-gradient(bottom, #426684 14%, #29B3FD 60%, #0E85CA 85%);
+    background-image: -webkit-linear-gradient(bottom, #426684 14%, #29B3FD 60%, #0E85CA 85%);
+    background-image: -ms-linear-gradient(bottom, #426684 14%, #29B3FD 60%, #0E85CA 85%);
+    background-image: -webkit-gradient(linear,left bottom, left top, color-stop(0.14, #426684),color-stop(0.6, #29B3FD),color-stop(0.85, #0E85CA));
 }
 
 
@@ -204,15 +205,15 @@ input[type=radio]{float:left; margin:3px 5px 0 0;}
     -moz-border-radius-topleft: 4px;
 }
 .suggest-form p{
-	margin-bottom: 12px;
+    margin-bottom: 12px;
 }
 .suggest-form input, .suggest-form textarea {
-	padding: 6px;
-	border-radius: 6px;
-	border: 1px solid #dedede;
+    padding: 6px;
+    border-radius: 6px;
+    border: 1px solid #dedede;
 }
 #recaptcha_area{
-	margin-bottom: 12px;
+    margin-bottom: 12px;
 }
 
 .position { display: inline; }
@@ -220,7 +221,7 @@ input[type=radio]{float:left; margin:3px 5px 0 0;}
 #contact a { color: #333; font-weight: normal; text-decoration: underline; padding-right: 10px; }
 
 .box4 {
-	background: #fff;
+    background: #fff;
     padding: 0 30px;
     margin-bottom: 20px;
 }
@@ -249,12 +250,12 @@ input[type=radio]{float:left; margin:3px 5px 0 0;}
 }
 
 .related-docs ul {
-	list-style: none;
+    list-style: none;
 }
 
 .related-docs ul li {
-	border-bottom: 1px solid rgb(229,229,229);
-	padding: 5px 0;
+    border-bottom: 1px solid rgb(229,229,229);
+    padding: 5px 0;
 }
 
 .rec-box{
@@ -293,77 +294,28 @@ input[type=radio]{float:left; margin:3px 5px 0 0;}
     margin-right: 10px;
 }
 
-
-@media (min-width: 766px) and (max-width: 1099px) {
-	.ajusta, .ajusta3, .ajusta2, .top, .bar .barInner, .footerArea {width:100%; margin:0;}
-	.container{width:95% !important;margin: 0 2.5% !important;}
-	#conteudo{width: 65%;margin: 0 2.5%;}
-	#sidebar{width:30%;}
-	.conteudo-loop{width:94%;}
+ul.col3 {
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+    -webkit-column-gap: 2rem;
+    -moz-column-gap: 2rem;
+    column-gap: 2rem;
+    padding-right: 2rem;
+    padding-left: 2rem;
 }
 
-@media (min-width: 525px) and (max-width: 767px) {
-	.ajusta, .ajusta3, .ajusta2, .top, .bar .barInner, .footerArea {width:100%; margin:0;}
-	.h2-loop-tit{width:110%;}
-	.conteudo-loop-rates{position:relative; right:0px; top:0px; float:left; width:100%; margin-top:7px;}
-	.header-search{width:100%; margin:15px 2.5%;}
-	.input-search{width:270px;}
-	.header-colabore{display:none;}
-	#conteudo{width:95%; margin:0 2.5%;}
-	.breadcrumb {margin-left: 8px;}
-	.conteudo-loop{width:94%;}
-	.conteudo-loop-icons{max-height:100% !important;}
-	.conteudo-loop-icons-li{width:50%; float:left; margin:0; position:relative; line-height:26px;}
-	.conteudo-loop-icons-li:first-child{margin:0px !important;}
-	.conteudo-loop-icons-li:last-child{margin:0px !important;}
-	#sidebar{width: auto;float: none;padding: 0 20px;}
-	.tablet{display:block;}
-	#left{float:left !important;}
-	.menu-mapa-do-site-pt-container {width:auto;}
-    .resultsBar {width: 79% !important}
+.list-header {
+    float: left;
+    display: flex;
+    flex-direction: column;
 }
 
-@media (max-width: 525px) {
-	.ajusta, .ajusta3, .ajusta2, .bar .barInner {width:100%; margin:0;}
-    .content-area {display: flex;}
-    .result-list {flex-direction: column-reverse;}
-    .detail {flex-direction: column;}
-	.top, .footerArea {width: 93%;margin:0;}
-	#contact{display: none;}
-	.bar{padding:4px 0;}
-	.h2-loop-tit{width:100%;}
-	.h1-header{width:100%; float:left; margin-bottom:7px;}
-	.header-search{width:95%; margin:5px 2.5%;  }
-	.input-search{width:225px;}
-	.conteudo-loop-rates{position:relative; right:0px; top:0px; float:left; width:100%; margin-top:7px;}
-	header .pagination{display: none;}
-	.breadcrumb{display: none;}
-	#sidebar{float: left; width: 95%; margin: 0 2.5%;}
-	#conteudo{width:95%; margin:0 2.5%;}
-	#conteudo header.border-bottom{padding:3px 0;}
-	.conteudo-loop-icons{max-height:100% !important;}
-	.conteudo-loop-icons-li{float:none !important; margin:0; position:relative; line-height:26px;}
-	.conteudo-loop-icons-li:first-child{margin:0px !important;}
-	.conteudo-loop-icons-li:last-child{margin:0px !important;}
-	.conteudo-loop{width:90%;}
-	#left{float:left !important;}
-	.tablet{display:block;}
-	.menu-mapa-do-site-pt-container {width:auto;}
-    #filters {display: none;}
-    #filter-link {display: block !important;}
+.list-header .input-search {
+    width: 390px;
 }
 
-@media (max-width: 479px) {
-	.container {width: 97%;}
-	.header-search .input-search {width:60%;}
-	#searchsubmit {padding: 10px 10px;}
-  .help {margin-left: 2px;}
-	/*#parent {margin-top: 40px;}*/
-	.more {display: table;	min-width: 190px;}
-	.rss, .tooltip { display: none;}
-}
-
-.mobile-menu{
+.mobile-menu {
     border: solid 1px #ccc;
     width: 135px;
     background-color: rgb(245,245,245);
@@ -409,8 +361,7 @@ input[type=radio]{float:left; margin:3px 5px 0 0;}
     transform: rotate(45deg) translate(-6px, -6px) ;
 }
 
-/* loader */
-
+/* Loader */
 .loader {
     border: 2px solid #f3f3f3; /* Light grey */
     border-top: 2px solid #3498db; /* Blue */
@@ -425,7 +376,7 @@ input[type=radio]{float:left; margin:3px 5px 0 0;}
     100% { transform: rotate(360deg); }
 }
 #tabs ul {
-	list-style: none;
+    list-style: none;
 }
 #tabs ul li button:active , #tabs ul li button:hover, #tabs ul li button:focus, #tabs ul li button{
     border: transparent;
@@ -438,7 +389,7 @@ input[type=radio]{float:left; margin:3px 5px 0 0;}
     margin-right: 20px;
     color: #ccc;
     font-weight: bold;
-		font-size: 12px;
+        font-size: 12px;
 }
 #tabs ul li button:hover {
     color: #000;
@@ -448,31 +399,100 @@ input[type=radio]{float:left; margin:3px 5px 0 0;}
 
 }
 .destak h2 {
-	margin-top: -30px;
-	background-color: #dbdbdb;
-	padding: 5px 10px;
-	color: #545454;
-	font-size: 16px;
-	font-weight: normal;
-	width: 110px;
-	margin-bottom: 10px;
-	border-radius: 5px;
+    margin-top: -30px;
+    background-color: #dbdbdb;
+    padding: 5px 10px;
+    color: #545454;
+    font-size: 16px;
+    font-weight: normal;
+    width: 110px;
+    margin-bottom: 10px;
+    border-radius: 5px;
 }
 
 
 .destak {
-	border: 1px solid #ccc;
-	padding: 15px;
-	border-radius: 5px;
-	float: left;
-	margin-top: 30px;
-	width: 100%;
-	box-sizing: border-box;
+    border: 1px solid #ccc;
+    padding: 15px;
+    border-radius: 5px;
+    float: left;
+    margin-top: 30px;
+    width: 100%;
+    box-sizing: border-box;
 
 }
 
 .video iframe {
-	margin: 5%;
-	width: 90%;
-	box-shadow: 2px 2px 5px #888;
+    margin: 5%;
+    width: 90%;
+    box-shadow: 2px 2px 5px #888;
+}
+
+@media (min-width: 766px) and (max-width: 1099px) {
+    .ajusta, .ajusta3, .ajusta2, .top, .bar .barInner, .footerArea {width:100%; margin:0;}
+    .container{width:95% !important;margin: 0 2.5% !important;}
+    #conteudo{width: 65%;margin: 0 2.5%;}
+    #sidebar{width:30%;}
+    .conteudo-loop{width:94%;}
+}
+
+@media (min-width: 525px) and (max-width: 767px) {
+    .ajusta, .ajusta3, .ajusta2, .top, .bar .barInner, .footerArea {width:100%; margin:0;}
+    .h2-loop-tit{width:110%;}
+    .conteudo-loop-rates{position:relative; right:0px; top:0px; float:left; width:100%; margin-top:7px;}
+    .header-search{width:100%; margin:15px 2.5%;}
+    .input-search{width:270px;}
+    .header-colabore{display:none;}
+    #conteudo{width:95%; margin:0 2.5%;}
+    .breadcrumb {margin-left: 8px;}
+    .conteudo-loop{width:94%;}
+    .conteudo-loop-icons{max-height:100% !important;}
+    .conteudo-loop-icons-li{width:50%; float:left; margin:0; position:relative; line-height:26px;}
+    .conteudo-loop-icons-li:first-child{margin:0px !important;}
+    .conteudo-loop-icons-li:last-child{margin:0px !important;}
+    #sidebar{width: auto;float: none;padding: 0 20px;}
+    .tablet{display:block;}
+    #left{float:left !important;}
+    .menu-mapa-do-site-pt-container {width:auto;}
+    .resultsBar {width: 79% !important}
+}
+
+@media (max-width: 525px) {
+    .ajusta, .ajusta3, .ajusta2, .bar .barInner {width:100%; margin:0;}
+    .content-area {display: flex;}
+    .result-list {flex-direction: column-reverse;}
+    .detail {flex-direction: column;}
+    .top, .footerArea {width: 93%;margin:0;}
+    #contact{display: none;}
+    .bar{padding:4px 0;}
+    .h2-loop-tit{width:100%;}
+    .h1-header{width:100%; float:left; margin-bottom:7px;}
+    .header-search{width:95%; margin:5px 2.5%;  }
+    .input-search{width:225px;}
+    .conteudo-loop-rates{position:relative; right:0px; top:0px; float:left; width:100%; margin-top:7px;}
+    header .pagination{display: none;}
+    .breadcrumb{display: none;}
+    #sidebar{float: left; width: 95%; margin: 0 2.5%;}
+    #conteudo{width:95%; margin:0 2.5%;}
+    #conteudo header.border-bottom{padding:3px 0;}
+    .conteudo-loop-icons{max-height:100% !important;}
+    .conteudo-loop-icons-li{float:none !important; margin:0; position:relative; line-height:26px;}
+    .conteudo-loop-icons-li:first-child{margin:0px !important;}
+    .conteudo-loop-icons-li:last-child{margin:0px !important;}
+    .conteudo-loop{width:90%;}
+    #left{float:left !important;}
+    .tablet{display:block;}
+    .menu-mapa-do-site-pt-container {width:auto;}
+    #filters {display: none;}
+    #filter-link {display: block !important;}
+}
+
+@media (max-width: 479px) {
+    .container {width: 97%;}
+    .header-search .input-search {width:60%;}
+    #searchsubmit {padding: 10px 10px;}
+  .help {margin-left: 2px;}
+    /*#parent {margin-top: 40px;}*/
+    .more {display: table;    min-width: 190px;}
+    .rss, .tooltip { display: none;}
 }
