--- a/template/css/style.css
+++ b/template/css/style.css
@@ -106,7 +106,7 @@ ol.doc-loop li p {font-size: .9rem; font-weight: normal; color:rgb(102,102,102);
 
 /* FORMS */
 textarea, input{font:12px "Open Sans", Helvetica, Arial, Sans-Serif; color:rgb(102,102,102); line-height:18px;}
-select{float:left; border-radius:4px; border:1px solid rgb(132,132,132); font-size: 11px;}
+select{float:left; border-radius:4px; border:1px solid rgb(132,132,132); font-size: 11px; padding: 4.5px;}
 input[type=radio]{float:left; margin:3px 5px 0 0;}
 .select-input-home{max-height:29px; min-height:29px; margin:0 10px;}
 #searchsubmit{
@@ -313,6 +313,16 @@ ul.col3 {
 
 .list-header .input-search {
     width: 390px;
+}
+
+.search-form {
+    display: flex;
+    align-items: baseline;
+    clear: both;
+}
+
+.search-form label {
+    margin-right: 10px;
 }
 
 .mobile-menu {
