--- a/template/css/style.css
+++ b/template/css/style.css
@@ -325,6 +325,22 @@ ul.col3 {
     margin-right: 10px;
 }
 
+.text-center {
+    text-align: center;
+}
+
+.show-more {
+    clear: both;
+}
+
+.loading {
+    display: none;
+}
+
+.hide {
+    display: none;
+}
+
 .mobile-menu {
     border: solid 1px #ccc;
     width: 135px;
